testing/blue-green-deploy/manual/blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: blue-green
spec:
  selector:
    matchLabels:
      app: app
      version: "1.0"
  replicas: 2
  template:
    metadata:
      labels:
        app: app
        version: "1.0"
    spec:
      containers:
        - name: service
          image: dmaxim/argo-cd-app:v1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "1"
              memory: "128Mi"
            requests:
              cpu: "0.5"
              memory: "128Mi"
