testing/blue-green-deploy/manual/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: blue-green
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: app
    version: "1.0"
